k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smiling-wallet
  labels:
    app: smiling-wallet
